--- a/C19V/templates/createperson.html
+++ b/C19V/templates/createperson.html
@@ -1,13 +1,9 @@
-{% extends 'home.html' %}
 {% load static %}
 
-{% block content %}
-
-<form action="{% url 'create_person' %}" method="POST">
+<h3>Add a Vaccinated Person</h3>
+<form action="" method="POST">
     {% csrf_token %}
 
     {{ form.as_p }}
     <input type='submit' name='Submit'>
 </form> 
-
-{% endblock %}
