--- a/C19V/templates/patient_health.html
+++ b/C19V/templates/patient_health.html
@@ -12,7 +12,7 @@
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
-                    <th>Day</th>
+                    <th>S.No</th>
                     <th>Date</th>
                     <th>Time</th>
                     <th>Status</th>
@@ -21,7 +21,7 @@
             <tbody>
                 {% for stat in status %}
                 <tr>
-                    <td>Day{{forloop.counter}}</td>
+                    <td>{{forloop.counter}}</td>
                     <td>{{stat.date}}</td>
                     <td>{{stat.time}}</td>
                     <td>{{stat.status}}</td>
