--- a/C19V/templates/vc_report.html
+++ b/C19V/templates/vc_report.html
@@ -24,7 +24,7 @@
 			  		<h5 class="card-title">Vaccination Successful</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title">{{successful}}</h3>
+			    	<h3 class="card-title">{{success}}</h3>
 			  	</div>
 			</div>
 		</div>
@@ -37,7 +37,7 @@
 			  		<h5 class="card-title">Vaccination Unsuccessful</h5>
 			  	</div>
 			  	<div class="card-body">
-			    	<h3 class="card-title">{{unsuccessfull}}</h3>
+			    	<h3 class="card-title">{{failure}}</h3>
 			  	</div>
 			</div>
 		</div>
@@ -49,19 +49,16 @@
 		<h5>PATIENTS:</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-dark  btn-sm btn-block" href="">Search for Patient Details</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'search_patient' person.id %}">Search for Patient Details</a>
 			<table class="table table-sm">
 				<tr>
 					<th></th>
-					<th>Patient name</th>
-					
+					<th>Patient name</th>	
 				</tr>
-
-				{% for patient in patients %}
+				{% for pat in search_patients %}
 					<tr>
-						<td><a href="">View</a></td>	
-						<td>{{patient.name}}</td>
-						
+						<td><a href="{% url 'show_patient' pat.id %}">View</a></td>	
+						<td>{{pat.name}}</td>	
 					</tr>
 				{% endfor %}
 
@@ -73,7 +70,7 @@
 		<h5>LAST 5 Vaccinated people</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-dark  btn-sm btn-block" href="">Add a Person</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'create_person' person.id %}">Add a Person</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
@@ -90,12 +87,9 @@
 						<td>{{patient.dob}}</td>
                         <td>{{patient.phone_no}}</td>
                         <td>{{patient.date_created}}</td>
-						
-
 					</tr>
 				{% endfor %}
 
-		
 			</table>
 		</div>
 	</div>
