--- a/C19V/static/css/patient_home.css
+++ b/C19V/static/css/patient_home.css
@@ -1,8 +1,7 @@
 body {
-    margin-top: 20px;
     color: #1a202c;
     text-align: left;
-    background-color:silver;
+    background-color:white ;
 }
 
 .main-body {
