added dynamic successful and unsuccessful vacination count

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -83,12 +83,12 @@
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0 pl-4">Progress</h6>
+            <h6 class="mb-0 pl-4">Health Progress(so far)</h6>
           </div>
           <div class="progress col-sm-9">
-            <div class="progress-bar bg-success" style="width:{{green}}%">{{green}}</div>
-            <div class="progress-bar bg-warning" style="width:{{yellow}}%">{{yellow}}</div>
-            <div class="progress-bar bg-danger" style="width:{{red}}%">{{red}}</div>
+            <div class="progress-bar bg-success" style="width:{{green}}%">{{green}}%</div>
+            <div class="progress-bar bg-warning" style="width:{{yellow}}%">{{yellow}}%</div>
+            <div class="progress-bar bg-danger" style="width:{{red}}%">{{red}}%</div>
           </div>
         </div>
       </div>
