changed Person model

--- a/C19V/templates/patient_home.html
+++ b/C19V/templates/patient_home.html
@@ -56,10 +56,28 @@
         <hr>
         <div class="row">
           <div class="col-sm-3">
-            <h6 class="mb-0 pl-4">Place</h6>
+            <h6 class="mb-0 pl-4">Address</h6>
           </div>
           <div class="col-sm-9 pl-4 text-secondary">
-            {{ person.centre.city }}
+            {{person.address}}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">City</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            {{person.city}}
+          </div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-3">
+            <h6 class="mb-0 pl-4">State</h6>
+          </div>
+          <div class="col-sm-9 pl-4 text-secondary">
+            {{ person.state }}
           </div>
         </div>
         <hr>
