--- a/C19V/templates/statistics.html
+++ b/C19V/templates/statistics.html
@@ -16,13 +16,12 @@
                 Dropdown button
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Day</a>
-                <a class="dropdown-item" href="#">Month</a>
-                <a class="dropdown-item" href="#">Year</a>
-                <a class="dropdown-item" href="#">Over all</a>
+                <a class="dropdown-item" href="">Day</a>
+                <a class="dropdown-item" href="">Month</a>
+                <a class="dropdown-item" href="">Year</a>
+                <a class="dropdown-item" href="">Over all</a>
             </div>
         </div>
-     
     </div>
     <div class="btn-group" style="margin-top: 3%;margin-left: 28%;">
         <div class="dropdown">
@@ -30,26 +29,19 @@
                 Dropdown button
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">City</a>
-                <a class="dropdown-item" href="#">State</a>
-                <a class="dropdown-item" href="#">Country</a>
-            </div>
-        </div>
-    
-    </div>
-    <div class="btn-group" style="margin-top: 3%;float:right;">
-        <div class="dropdown">
-            <button type="button" class="btn btn-dark dropdown-toggle" data-toggle="dropdown">
-                Dropdown button
-            </button>
-            <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Succeed</a>
-                <a class="dropdown-item" href="#">Failure</a>
+                <a class="dropdown-item" href="">City</a>
+                <a class="dropdown-item" href="">State</a>
+                <a class="dropdown-item" href="">Overall</a>
             </div>
         </div>
     </div>
-      
 </div><br><br>
+    <form method='GET'>
+        {{filter.form.as_p}}
+        <input type='submit' name='Search'>
+    </form>
+    <h4>{{people}}</h4>
+
 <div class="container" style="font-family: sans-serif;margin-top: 6%;margin-left: 30%;">
     <div class="chart">
         <ul class="numbers">
