added a new feature

--- a/C19V/templates/showcentre.html
+++ b/C19V/templates/showcentre.html
@@ -99,7 +99,7 @@
               <h6 class="mb-0 pl-4">Total Vaccinations</h6>
             </div>
             <div class="col-sm-9 pl-4 text-secondary">
-              {{Count}}
+              {{count}}
             </div>
           </div>
         </div>
