--- a/C19V/templates/statistics.html
+++ b/C19V/templates/statistics.html
@@ -50,7 +50,7 @@
             {% for per in percent %}
                 {% if forloop.counter == forloop.parentloop.counter %}
                     <li>
-                        <div class="bar" data-percentage="{{ per }}"></div><span>Centre {{cen.id}}</span>
+                        <div class="bar" data-percentage="{{ per }}"></div><span><a href="{% url 'show_centre' cen.id %}">Centre {{cen.id}}</a></span>
                     </li>
                 {% endif %}
             {% endfor %}
