--- a/C19V/templates/createstatus.html
+++ b/C19V/templates/createstatus.html
@@ -2,6 +2,6 @@
 <h3>Update your Status </h3>
 <form action='' method='POST'>
     {% csrf_token %}
-    {{form.as_p}}
-    <input type='submit' name='Submit'>
+   <label for="status">Health Status - </label>
+    {{ form.status }} <br><br>
 </form>
