--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<link rel="stylesheet" href='{% static "css/registerperson.css" %}'>
+
 <h3>Add a Vaccinated Person</h3>
 <form action="" method="POST">
     {% csrf_token %}
