--- a/C19V/templates/registercentre.html
+++ b/C19V/templates/registercentre.html
@@ -1,28 +1,65 @@
 {% load static %}
 
-<link rel="stylesheet" href='{% static "css/registercentre.css" %}'>
+<link rel="stylesheet-+69" href='{% static "css/registercentre.css" %}'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<br><h2 style="text-align:center;">Register Your Vaccinated Centre</h2><br><br>
+<div class="container">
+    <form action="" method="POST">
+        {% csrf_token %}
+       
+    <table class="table table-dark table-hover">
+       
+        <tbody>
+            <tr>
+                <td><label for="name">Name - &nbsp&nbsp</label>
+                {{ form.name }}</td>
+                <td><label for="city">City - &nbsp</label>
+                    {{ form.city }}</td>
+    
+            </tr>
+            <tr>
+                <td><label for="email">Email Id - </label>
+                {{ form.email }}</td>
+                <td><label for="state">State - </label>
+                    {{ form.state }}</td>
+    
+            </tr>
+            <tr>
+                <td><label for="phone_no">Phone Number - </label>
+                {{ form.phone_no }}</td>
+                <td><label for="pincode">Pincode - </label>
+                    {{ form.pincode }}</td>
+    
+            </tr>
+          
+          
+            <tr>
+                <td>
+                    <label for="active_time_from">Opening Time - &nbsp</label>
+                    {{ form.active_time_from }}
+                   
+                </td>
+                <td>
+                    <label for="active_time_to">Closing Time - </label>
+                    {{ form.active_time_to }}
+                </td>
+            </tr>
+            <tr>
+                <td><label for="address">Address - &nbsp</label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div>
+                    </td>
+            
+            </tr>
+        </tbody>
+    </table><br>
+    <input style=" background-color: #242526;
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      text-decoration: none;
+      margin-left: 45%;
+      cursor: pointer;border-radius:3px;
+    " type='submit' name='Submit'>
+</form>
 
-<h3>Register Your Vaccinated Centre</h3>
-<form action="" method="POST">
-    {% csrf_token %}
-
-    <label for="name">Name - </label>
-    {{ form.name }} <br><br>
-    <label for="email">Email Id - </label>
-    {{ form.email }} <br><br>
-    <label for="phone_no">Phone Number - </label>
-    {{ form.phone_no }} <br><br>
-    <label for="address">Address - </label>
-    {{ form.address }} <br><br>
-    <label for="city">City - </label>
-    {{ form.city }} <br><br>
-    <label for="state">State - </label>
-    {{ form.state }} <br><br>
-    <label for="pincode">Pincode - </label>
-    {{ form.pincode }} <br><br>
-    <label for="active_time_from">Opening Time - </label>
-    {{ form.active_time_from }} <br><br>
-    <label for="active_time_to">Closing Time - </label>
-    {{ form.active_time_to }} <br><br>
-    <input type='submit' name='Submit'>
-</form> 
+</div>
