--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -1,25 +1,56 @@
 {% load static %}
 
 <link rel="stylesheet" href='{% static "css/registerperson.css" %}'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<h3>Add a Vaccinated Person</h3>
-<form action="" method="POST">
-    {% csrf_token %}
+<div class="container">
+    <br>
+    <h2 style="text-align:center;">Add a Vaccinated Person</h2><br><br>
+    <form action="" method="POST">
+        {% csrf_token %}
+        
+   
+    <table class="table table-dark table-hover">
+        <tbody>
+            <tr>
+                <td><label for="name">Name - &nbsp</label>
+                {{ form.name }}</td>
+                <td><label for="phone_no">Phone Number - </label>
+                {{ form.phone_no }}</td>
+                
+            </tr>
+            <tr>
+                <td><label for="gender">Gender - </label>
+                {{ form.gender }}</td>
+                <td><label for="city">City - &nbsp</label>
+                {{ form.city }}</td>
+              
+            </tr>
+            <tr>
+                <td><label for="dob">Date of Birth - </label>
+                {{ form.dob }}</td>
+                <td><label for="state">State - </label>
+                    {{ form.state }}</td>
+                
+                
+            </tr>
+            <tr>
+                <td><label for="address">Address - </label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div>
+                   </td>
+                  
+            </tr>
+        </tbody>
+    </table>
+    <br>
+    <input style=" background-color: #242526;
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      text-decoration: none;
+      margin-left: 45%;
+      cursor: pointer;border-radius:3px;
+    " type='submit' name='Submit'>
+    </form>
 
-    <label for="name">Name - </label>
-    {{ form.name }} <br><br>
-    <label for="gender">Gender - </label>
-    {{ form.gender }} <br><br>
-    <label for="dob">Date of Birth - </label>
-    {{ form.dob }} <br><br>
-    <label for="phone_no">Phone Number - </label>
-    {{ form.phone_no }} <br><br>
-    <label for="address">Address - </label>
-    {{ form.address }} <br><br>
-    <label for="city">City - </label>
-    {{ form.city }} <br><br>
-    <label for="state">State - </label>
-    {{ form.state }} <br><br>
-
-    <input type='submit' name='Submit'>
-</form> 
+</div>
