--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -1,6 +1,5 @@
 {% load static %}
 
-<link rel="stylesheet" href='{% static "css/registerperson.css" %}'>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -32,14 +31,16 @@
                 {{ form.dob }}</td>
                 <td><label for="state">State - </label>
                     {{ form.state }}</td>
-                
-                
+                           
             </tr>
             <tr>
-                <td><label for="address">Address - </label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div>
-                   </td>
-                  
+                <td><label for="address">Address - </label><div style="width:50%;margin-left: 15%;">
+                    {{ form.address }}</div></td>
             </tr>
+            <div style="display: none;">
+                <label for="centre"><b>Vaccination Centre -</b> </label>
+                {{ form.centre }}<br><br>
+            </div>
         </tbody>
     </table>
     <br>
