changed to search

--- a/C19V/templates/vc_report.html
+++ b/C19V/templates/vc_report.html
@@ -50,13 +50,12 @@
 		<h5>PATIENTS:</h5>
 		<hr>
 		<div class="card card-body">
-			
 					<form action="" method="GET">
 						<div class="search-container" style="text-align: center;margin-right: 35px;margin-bottom: 10px;">
 						<label for="name"><strong>Patient Name:&nbsp</strong></label>
 						{{filter.form.name}}
 							
-							<button class="btn btn-dark  btn-sm pd" type="submit" style="margin-bottom: 5px;"><b>Search&nbsp<i class="fa fa-search"></i></b></button>
+							<button class="btn btn-dark  btn-sm pd" type="search" style="margin-bottom: 5px;"><b>Search&nbsp<i class="fa fa-search"></i></b></button>
 						</div>
 						
 					</form>
