--- a/C19V/templates/callambulance.html
+++ b/C19V/templates/callambulance.html
@@ -1,1 +1,71 @@
 {% load static %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<div class="container">
+    <img src="{% static '/images/amb1.jpg' %}" class="rounded" style="margin-left: 42%;" alt="Ambulance" width="180" height="180">
+    <h2 style="text-align: center;"><b>EMERGENCY</b></h2><br>
+    
+    <table class="table table-dark table-striped">
+       <!-- <thead>
+            <tr>
+                <th style="text-align: center;font-size:20px;"><b>Details</b></th>
+            </tr>
+        </thead>-->
+        <tbody>
+            <tr>
+                <td><form action="">
+                    <label for="pname"> Patient name:&nbsp</label>
+                    <input type="text" id="pname" name="pname">
+                </form></td>
+                <td>
+                    <form action="">
+                        <label for="num">Ph No:&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+                        <input type="text" pattern="[0-9]{10}" id="num" name="num" required>
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                <td><form action="">
+                    <label for="city">City:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+                    <input type="text" id="city" name="city">
+                </form></td>
+                <td>
+                    <form action="">
+                        <label for="pin">Pin Code:&nbsp</label>
+                        <input type="text" pattern="[0-9]{6}" id="pin" name="pin" required>
+                    </form>
+                </td>
+            </tr>
+            <tr>
+                            <td>
+                                <form action="">
+                                    <label for="Add">Address:&nbsp</label>
+                                    <input type="text" id="Add" name="Add" required>
+                                </form>
+                            </td><td>
+                            <form action="">
+                                <label for="Add">Landmark:&nbsp</label>
+                                <input type="text" id="Add" name="Add" placeholder="(Optional)" style="text-align: center">
+                            </form>
+                            </td>
+            </tr>
+            <tr>
+                <td>
+                                <form action="">
+                                    <label for="Add">Health Status:&nbsp</label>
+                                    <input type="text" id="Add" name="Add" placeholder="(Optional)" style="text-align: center">
+                                </form>
+                            </td>
+                            <td>
+                                <form action="">
+                                    <label for="Sym">Symptoms:&nbsp</label>
+                                    <input type="text" id="Sym" name="Sym" placeholder="(Optional)" style="text-align: center">
+                                </form>
+                            </td>
+             </tr>
+        </tbody>
+    </table><br>
+    <button type="button" class="btn btn-dark" style="margin-left: 43.5%;"><b>Send Ambulance</b></button>
+</div>
