updated tables in ambulance.html

--- a/C19V/templates/callambulance.html
+++ b/C19V/templates/callambulance.html
@@ -6,66 +6,43 @@
 <div class="container">
     <img src="{% static '/images/amb1.jpg' %}" class="rounded" style="margin-left: 42%;" alt="Ambulance" width="180" height="180">
     <h2 style="text-align: center;"><b>EMERGENCY</b></h2><br>
-    
     <table class="table table-dark table-striped">
-       <!-- <thead>
-            <tr>
-                <th style="text-align: center;font-size:20px;"><b>Details</b></th>
-            </tr>
-        </thead>-->
-        <tbody>
-            <tr>
-                <td><form action="">
-                    <label for="pname"> Patient name:&nbsp</label>
-                    <input type="text" id="pname" name="pname">
-                </form></td>
-                <td>
-                    <form action="">
-                        <label for="num">Ph No:&nbsp&nbsp&nbsp&nbsp&nbsp</label>
-                        <input type="text" pattern="[0-9]{10}" id="num" name="num" required>
-                    </form>
-                </td>
-            </tr>
-            <tr>
-                <td><form action="">
-                    <label for="city">City:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
-                    <input type="text" id="city" name="city">
-                </form></td>
-                <td>
-                    <form action="">
-                        <label for="pin">Pin Code:&nbsp</label>
-                        <input type="text" pattern="[0-9]{6}" id="pin" name="pin" required>
-                    </form>
-                </td>
-            </tr>
-            <tr>
-                            <td>
-                                <form action="">
-                                    <label for="Add">Address:&nbsp</label>
-                                    <input type="text" id="Add" name="Add" required>
-                                </form>
-                            </td><td>
-                            <form action="">
-                                <label for="Add">Landmark:&nbsp</label>
-                                <input type="text" id="Add" name="Add" placeholder="(Optional)" style="text-align: center">
-                            </form>
-                            </td>
-            </tr>
-            <tr>
-                <td>
-                                <form action="">
-                                    <label for="Add">Health Status:&nbsp</label>
-                                    <input type="text" id="Add" name="Add" placeholder="(Optional)" style="text-align: center">
-                                </form>
-                            </td>
-                            <td>
-                                <form action="">
-                                    <label for="Sym">Symptoms:&nbsp</label>
-                                    <input type="text" id="Sym" name="Sym" placeholder="(Optional)" style="text-align: center">
-                                </form>
-                            </td>
-             </tr>
-        </tbody>
-    </table><br>
+    <tbody>
+      <tr>
+        <td style="text-align: center;">Patient Name:</td>
+        <td style="text-align: center;">B.Manoj srinivas</td>
+    </tr>
+      <tr>
+        <td style="text-align: center;">Phone No:</td>
+        <td style="text-align: center;">9491728289</td>
+      </tr>
+      <tr>
+        <td style="text-align: center;">Pin Code:</td>
+        <td style="text-align: center;">500048</td>
+        
+      </tr>
+        <tr>
+            <td style="text-align: center;">Address:</td>
+            <td style="text-align: center;">lingampalli,khanamat.</td>
+        
+        </tr>
+        <tr>
+            <td style="text-align: center;">LandMark:</td>
+            <td style="text-align: center;">Near railway station.</td>
+        
+        </tr>
+        <tr>
+            <td style="text-align: center;">City:</td>
+            <td style="text-align: center;">Hyderabad</td>
+        
+        </tr>
+        <tr>
+            <td style="text-align: center;">Current Health Status:</td>
+            <td style="text-align: center;">Good</td>
+        
+        </tr>
+    </tbody>
+  </table>
+    <br>
     <button type="button" class="btn btn-dark" style="margin-left: 43.5%;"><b>Send Ambulance</b></button>
 </div>
