updated tables data

--- a/C19V/templates/callambulance.html
+++ b/C19V/templates/callambulance.html
@@ -8,41 +8,28 @@
     <h2 style="text-align: center;"><b>EMERGENCY</b></h2><br>
     <table class="table table-dark table-striped">
     <tbody>
-      <tr>
-        <td style="text-align: center;">Patient Name:</td>
-        <td style="text-align: center;">B.Manoj srinivas</td>
+        <thead>
+            <tr>
+                <th>Patient Name</th>
+                <th>Phone No</th>
+                
+                <th>Address</th>
+                <th>LandMark</th>
+                <th>Pin Code</th>
+                
+            </tr>
+        </thead>
+    <tr>
+        <td>B.Manoj srinivas</td>
+        <td>9491728289</td>
+        
+        <td>lingampalli,khanamat.</td>
+        <td>Near railway station.</td>
+        <td>Hyderabad</td>
+       
     </tr>
-      <tr>
-        <td style="text-align: center;">Phone No:</td>
-        <td style="text-align: center;">9491728289</td>
-      </tr>
-      <tr>
-        <td style="text-align: center;">Pin Code:</td>
-        <td style="text-align: center;">500048</td>
-        
-      </tr>
-        <tr>
-            <td style="text-align: center;">Address:</td>
-            <td style="text-align: center;">lingampalli,khanamat.</td>
-        
-        </tr>
-        <tr>
-            <td style="text-align: center;">LandMark:</td>
-            <td style="text-align: center;">Near railway station.</td>
-        
-        </tr>
-        <tr>
-            <td style="text-align: center;">City:</td>
-            <td style="text-align: center;">Hyderabad</td>
-        
-        </tr>
-        <tr>
-            <td style="text-align: center;">Current Health Status:</td>
-            <td style="text-align: center;">Good</td>
-        
-        </tr>
     </tbody>
-  </table>
+</table>
     <br>
     <button type="button" class="btn btn-dark" style="margin-left: 43.5%;"><b>Send Ambulance</b></button>
 </div>
