--- a/C19V/templates/callambulance.html
+++ b/C19V/templates/callambulance.html
@@ -15,7 +15,7 @@
                 
                 <th>Address</th>
                 <th>LandMark</th>
-                <th>Pin Code</th>
+                <th>City</th>
                 
             </tr>
         </thead>
