--- a/C19V/templates/vc_register.html
+++ b/C19V/templates/vc_register.html
@@ -48,8 +48,12 @@
             <input type="email" class="form-control" id="inputEmail">
           </div>
           <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" class="form-control" id="inputPassword">
+            <label for="Password1">Password</label>
+            <input type="password" class="form-control" id="Password1">
+          </div>
+          <div class="form-group">
+            <label for="Password2">Re-enter Password</label>
+            <input type="password" class="form-control" id="Password2">
           </div>
           <button type="submit" style="background-color:black;"class="btn btn btn-primary">
             Sign Up
