added login and logout views

--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -39,12 +39,12 @@
   {% if block == 'Patient' %}
 
     <span class='text-white mx-3 '>Hi {{person.name}}</span>
-    <span><a href="{% url 'login'%}">Logout</a></span>
+    <span><a href="{% url 'logout'%}">Logout</a></span>
   
   {% else %}
 
   <span class='text-white mx-3'>{{person.name}}</span>
-  <span><a href="{% url 'loginvc'%}">Logout</a></span>
+  <span><a href="{% url 'logoutvc'%}">Logout</a></span>
 
   {% endif %}
 
