--- a/C19V/templates/vc_login.html
+++ b/C19V/templates/vc_login.html
@@ -57,14 +57,11 @@
           </button>
         </form>
       </div>
-
       <div>
-        
-      <h3>Not yet Registered?</h3>
-      <a href="{% url 'registervc' %}">Sign Up</a>
-
+        <p>{{ messages }}</p>
+        <h3>Not yet Registered?</h3>
+        <a href="{% url 'registervc' %}">Sign Up</a>
       </div>
-
     </div>
   </div>
 </div>
