--- a/C19V/templates/vc_register.html
+++ b/C19V/templates/vc_register.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>C-19 Vaccine</title>
-    <link rel="stylesheet" href="{% static "css/login.css" %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -44,16 +44,17 @@
             <input type="text" class="form-control" id="inputUsernameEmail">
           </div>
           <div class="form-group">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail">
-          </div>
-          <div class="form-group">
             <label for="Password1">Password</label>
             <input type="password" class="form-control" id="Password1">
           </div>
           <div class="form-group">
             <label for="Password2">Re-enter Password</label>
             <input type="password" class="form-control" id="Password2">
+          </div>
+          <hr>
+          <div class="form-group">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail">
           </div>
           <button type="submit" style="background-color:black;"class="btn btn btn-primary">
             Sign Up
