--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -35,19 +35,19 @@
         <hr class="hr-or">
       </div>
 
-      <form role="form">
+      <form role="form" method='POST' action=''>
+        {% csrf_token %}
         <div class="form-group">
-          <label for="phone_no">Mobile Number</label>
-          <input type="text" class="form-control" id="phone_no">
+          <label for="inputUsernameEmail">Username</label>
+          <input type="text" name='username' class="form-control" id="inputUsernameEmail">
         </div>
         <div class="form-group">
-          <label for="dob">Date of Birth</label>
-          <input type="date" class="form-control" id="dob">
+          <a class="pull-right" href="#">Forgot password?</a>
+          <label for="inputPassword">Password</label>
+          <input type="password" name='password' class="form-control" id="inputPassword">
         </div>
         <div class="checkbox pull-right">
-          <label>
-            <input type="checkbox">
-            Remember me </label>
+          <label><input type="checkbox">Remember me </label>
         </div>
         <button type="submit" style="background-color:black;" class="btn btn btn-primary">
           Log In
