--- a/C19V/templates/registercentre.html
+++ b/C19V/templates/registercentre.html
@@ -38,8 +38,7 @@
                 </td>
             </tr>
             <tr>
-                <td><label for="address">Address - &nbsp</label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div>
-                    </td>
+                <td><label for="address">Address - &nbsp</label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div></td>
             </tr>
         </tbody>
     </table><br>
