added login logout functionality

--- a/C19V/templates/patient_login.html
+++ b/C19V/templates/patient_login.html
@@ -53,6 +53,9 @@
           Log In
         </button>
       </form>
+      {% for mess in messages %}
+      <p>{{mess}}</p>
+      {% endfor %}
       <h3>Not yet Vaccinated?</h3>
               <a href="#" style="background-color:#696969;"class="btn btn-lg btn-info btn-block">NearBy Vaccination Centre</a>
     </div>
