--- a/C19V/templates/registercentre.html
+++ b/C19V/templates/registercentre.html
@@ -40,6 +40,12 @@
             <tr>
                 <td><label for="address">Address - &nbsp</label><div style="width:50%;margin-left: 15%;">{{ form.address }}</div></td>
             </tr>
+            <tr style="display:none" >
+                <td>
+                    <label for="user"> User </label>
+                    {{ form.user }}
+                </td>
+            </tr>
         </tbody>
     </table><br>
     <input style=" background-color: #242526;
