--- a/C19V/templates/registerperson.html
+++ b/C19V/templates/registerperson.html
@@ -40,6 +40,8 @@
             <div style="display: none;">
                 <label for="centre"><b>Vaccination Centre -</b> </label>
                 {{ form.centre }}<br><br>
+                <label for="centre"><b>User -</b> </label>
+                {{ form.user }}<br><br>
             </div>
         </tbody>
     </table>
