--- a/C19V/templates/vc_report.html
+++ b/C19V/templates/vc_report.html
@@ -84,7 +84,7 @@
 		<h5>LAST 5 Vaccinated people</h5>
 		<hr>
 		<div class="card card-body">
-			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'create_person' person.id %}">Add a Person</a>
+			<a class="btn btn-dark  btn-sm btn-block" href="{% url 'register' person.id %}">Add a Person</a>
 			<table class="table table-sm">
 				<tr>
 					<th>Name</th>
