--- a/C19V/templates/vc_register.html
+++ b/C19V/templates/vc_register.html
@@ -36,21 +36,9 @@
       </div>
 
       <div class="signupbox">
-
         <form role="form" method="POST" action='' >
           {% csrf_token %}
-          <div class="form-group">
-            <label for="inputUsernameEmail">Username</label>
-            {{form.username}}
-          </div>
-          <div class="form-group">
-            <label for="Password1">Password</label>
-            {{form.password1}}
-          </div>
-          <div class="form-group">
-            <label for="Password2">Re-enter Password</label>
-            {{form.password2}}
-          </div>
+          {{form.as_p}}
           <button type="submit" style="background-color:black;"class="btn btn btn-primary">
             Sign Up
           </button>
