--- a/C19V/templates/patient_register.html
+++ b/C19V/templates/patient_register.html
@@ -1,6 +1,17 @@
 {% load static %}
 <form action='' method='POST'>
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit'>
+   <label for="name">User Name </label>
+                {{ form.username }}<br></br>
+    <label for="password1">Enter the password</label>
+                {{ form.password1 }}<br></br>
+    <label for="password2">Re enter the password</label>
+                {{ form.password2 }}<br></br>
+    <div style="display: none;">
+                <label for="is_staff"><b>is_staff-</b> </label>
+                {{ form.is_staff }}<br><br>
+    </div>
+    <button type="submit" style="background-color:black;"class="btn btn btn-primary">
+            Sign Up
+    </button>
 </form>
