fixed bug where initial status error

--- a/C19V/templates/navbar.html
+++ b/C19V/templates/navbar.html
@@ -38,12 +38,12 @@
 
   {% if block == 'Patient' %}
 
-    <span class='text-white mx-3 '>Hi {{person.name}}</span>
+    <span class='text-white mx-3 '>Hi {{person.user.username}}</span>
     <span><a href="{% url 'logout'%}">Logout</a></span>
   
   {% else %}
 
-  <span class='text-white mx-3'>{{person.name}}</span>
+  <span class='text-white mx-3'>{{person.user.username}}</span>
   <span><a href="{% url 'logoutvc'%}">Logout</a></span>
 
   {% endif %}
