styled login pages and added profile image using bootstrap4

--- a/C19V/templates/vc_register.html
+++ b/C19V/templates/vc_register.html
@@ -38,19 +38,38 @@
       <div class="signupbox">
         <form role="form" method="POST" action='' >
           {% csrf_token %}
-         <label for="name">User Name </label>
-                {{ form.username }}<br></br>
-          <label for="password1">Enter the password</label>
-                {{ form.password1 }}<br></br>
-          <label for="password2">Re enter the password</label>
-                {{ form.password2 }}<br></br>
-          <div style="display: none;">
-                <label for="is_staff"><b> is_staff-</b> </label>
-                {{ form.is_staff }}<br><br>
-          </div>
-          <button type="submit" style="background-color:black;"class="btn btn btn-primary">
-            Sign Up
-          </button>
+          <h3 style="text-align: center;"><b>Vaccination-Centre Registration Form</b></h3>
+            <table class="table table-borderless">
+              <tbody>
+                <tr>
+                  <td><label for="name">User Name: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+                  {{ form.username }}</td>
+                  
+                </tr>
+                <tr>
+                  <td><label for="password1">Enter the password:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</label>
+                  {{ form.password1 }}</td>
+                 
+                </tr>
+                <tr>
+                  <td><label for="password2">Re-enter the password:</label>
+                  {{ form.password2 }}</td>
+                 
+                </tr>
+                <tr>
+                  <td>
+                    <div style="display: none;">
+                      <label for="is_staff"><b> is_staff-</b> </label>
+                      {{ form.is_staff }}<br><br>
+                    </div>
+                    <button type="submit" style="background-color:black;" class="btn btn btn-primary">
+                      Sign Up
+                    </button>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
         </form>
       </div>
       <div>
