--- a/C19V/templates/patient_register.html
+++ b/C19V/templates/patient_register.html
@@ -1,17 +1,59 @@
 {% load static %}
-<form action='' method='POST'>
-    {% csrf_token %}
-   <label for="name">User Name </label>
-                {{ form.username }}<br></br>
-    <label for="password1">Enter the password</label>
-                {{ form.password1 }}<br></br>
-    <label for="password2">Re enter the password</label>
-                {{ form.password2 }}<br></br>
-    <div style="display: none;">
-                <label for="is_staff"><b>is_staff-</b> </label>
-                {{ form.is_staff }}<br><br>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <div class="container" style="text-align:center;font-family: sans-serif;"><br>
+    <div class="row">
+        <div class="col-4 mx-auto text-center">
+            <img src="{% static '/images/person.png' %}" class="rounded-circle" alt="Corona1" width="100" height="100">
+        </div>
     </div>
-    <button type="submit" style="background-color:black;"class="btn btn btn-primary">
-            SignUp
-    </button>
-</form>
+    <form action='' method='POST'>
+        {% csrf_token %}
+      
+       
+        <table class="table table-borderless">
+            <thead>
+                <tr>
+                    <th style="text-align: center;"><h1><strong>Patient Registration form</strong></h1></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                    <label for="name"><b>User Name:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> </label>
+                    {{ form.username }}</td>
+                    
+                </tr>
+                <tr>
+                    <td style="text-align: center;"><label for="password1"><b>Enter the password:&nbsp&nbsp&nbsp&nbsp</b></label>
+                    {{ form.password1 }}</td>
+
+                </tr>
+                <tr>
+                    <td style="text-align: center;"><label for="password2"><b>Re-enter the password:</b></label>
+                    {{ form.password2 }}</td>
+                    
+                </tr>
+                <tr>
+                    <td style="text-align: center;">
+                        <button type="submit" style="margin-left:10%" class="btn btn btn-dark">
+                            <strong>Sign Up</strong>
+                        </button>&nbsp&nbsp&nbsp&nbsp&nbsp
+                    <div style="display:none;">
+                        <label for="is_staff"><strong>is_staff-</strong> </label>
+                        {{ form.is_staff }}
+
+                    </div>
+                    
+                  
+                </td>
+            </tr>
+          
+               
+            </tbody>
+        </table>
+    </form>
+
+  </div>
